--- a/app/templates/createdata.html
+++ b/app/templates/createdata.html
@@ -151,19 +151,19 @@
                                                     <tr>
                                                         <th>Nama</th>
                                                         <td>
-                                                            <input type="text" name="nama"class="form-control">
+                                                            <input required type="text" name="nama"class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Plat Nomor</th>
                                                         <td>
-                                                            <input type="text" name="platnomor"class="form-control">
+                                                            <input required type="text" name="platnomor"class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Tanggal Pesan</th>
                                                         <td>
-                                                            <input type="date" name="tanggalpesan"class="form-control"> 
+                                                            <input required type="date" name="tanggalpesan"class="form-control"> 
                                                         </td>
                                                     </tr>
                                                 </table>
