--- a/app/templates/perbarui.html
+++ b/app/templates/perbarui.html
@@ -165,19 +165,19 @@
                                                     <tr>
                                                         <th>Nama</th>
                                                         <td>
-                                                            <input type="text" value="{{allpemesananobj.nama}}" name="nama"  class="form-control">
+                                                            <input required type="text" value="{{allpemesananobj.nama}}" name="nama"  class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Plat Nomor</th>
                                                         <td>
-                                                            <input type="text" value="{{allpemesananobj.platnomor}}" name="platnomor" class="form-control">
+                                                            <input required type="text" value="{{allpemesananobj.platnomor}}" name="platnomor" class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Tanggal Pesan</th>
                                                         <td>
-                                                            <input type="date" value="{{allpemesananobj.tanggalpesan}}.item" name="tanggalpesan" class="form-control"> 
+                                                            <input required  type="date" value="{{allpemesananobj.tanggalpesan}}.item" name="tanggalpesan" class="form-control"> 
                                                         </td>
                                                     </tr>
                                                 </table>
