--- a/app/templates/perbaruilayanan.html
+++ b/app/templates/perbaruilayanan.html
@@ -130,7 +130,7 @@
                                                     <tr>
                                                         <th>Jenis Layanan</th>
                                                         <td>
-                                                            <input type="text" value="{{alllayananobj.jenislayanan}}" name="jenislayanan" class="form-control">
+                                                            <input required type="text" value="{{alllayananobj.jenislayanan}}" name="jenislayanan" class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
