--- a/app/templates/perbaruipaket.html
+++ b/app/templates/perbaruipaket.html
@@ -131,19 +131,19 @@
                                                     <tr>
                                                         <th>Jenis Paket</th>
                                                         <td>
-                                                            <input type="text" value="{{allpaketlayananobj.jenispaket}}" name="jenispaket"  class="form-control">
+                                                            <input required type="text" value="{{allpaketlayananobj.jenispaket}}" name="jenispaket"  class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Keterangan Paket</th>
                                                         <td>
-                                                            <input type="text" value="{{allpaketlayananobj.keteranganpaket}}" name="keteranganpaket" class="form-control">
+                                                            <input required type="text" value="{{allpaketlayananobj.keteranganpaket}}" name="keteranganpaket" class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Harga</th>
                                                         <td>
-                                                            <input type="text" value="{{allpaketlayananobj.harga}}" name="harga" class="form-control"> 
+                                                            <input required type="text" value="{{allpaketlayananobj.harga}}" name="harga" class="form-control"> 
                                                         </td>
                                                     </tr>
                                                 </table>
