--- a/app/templates/tambahlayanan.html
+++ b/app/templates/tambahlayanan.html
@@ -133,13 +133,13 @@
                                                     <tr>
                                                         <th>Jenis Layanan</th>
                                                         <td>
-                                                            <input type="jenislayanan" name="jenislayanan" class="form-control">
+                                                            <input required type="jenislayanan" name="jenislayanan" class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Harga</th>
                                                         <td>
-                                                            <input type="number" name="harga" class="form-control">
+                                                            <input required type="number" name="harga" class="form-control">
                                                         </td>
                                                     </tr>
                                                 </table>
