--- a/app/templates/tambahpaket.html
+++ b/app/templates/tambahpaket.html
@@ -132,20 +132,20 @@
                                                     <tr>
                                                         <th>Jenis Paket</th>
                                                         <td>
-                                                            <input type="jenispaket" name="jenispaket" class="form-control">
+                                                            <input required type="jenispaket" name="jenispaket" class="form-control">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <th>Keterangan Paket</th>
                                                         <td>
-                                                            <input type="keteranganpaket" name="keteranganpaket" class="form-control">
+                                                            <input required type="keteranganpaket" name="keteranganpaket" class="form-control">
                                                         </td>
                                                             
                                                     </tr>
                                                     <tr>
                                                         <th>Harga</th>
                                                         <td>
-                                                            <input type="number" name="harga" class="form-control">
+                                                            <input required type="number" name="harga" class="form-control">
                                                         </td>
                                                     </tr>
                                                 </table>
