--- a/app/templates/rekap.html
+++ b/app/templates/rekap.html
@@ -145,7 +145,7 @@
                                                         </p>
                                                         
                                                     </td>
-                                                    <td>{{x.idlayanan.harga}} + {{item.0.idpaketpelanggan.harga}}</td>
+                                                    <td>{{total }}</td>
                                                     {% endfor %}
                                                 </tr>
                                             {% endfor %}
