--- a/app/templates/adddetaillayanan.html
+++ b/app/templates/adddetaillayanan.html
@@ -161,7 +161,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="footer">
-                                <p>2018 © Admin Board. - <a href="#">example.com</a></p>
+                                <p>2018 © Admin Board. - <a href="#">www.losikcarwash.id</a></p>
                             </div>
                         </div>
                     </div>
