--- a/app/templates/detaillayanan.html
+++ b/app/templates/detaillayanan.html
@@ -162,7 +162,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="footer">
-                                <p>2018 © Admin Board. - <a href="#">example.com</a></p>
+                                <p>2018 © Admin Board. - <a href="#">www.losikcarwash.com</a></p>
                             </div>
                         </div>
                     </div>
