--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -186,7 +186,7 @@
             <div class="col-lg-12">
               <div class="footer">
                 <p>2018 © Admin Board. -
-                  <a href="#">example.com</a>
+                  <a href="#">www.losikcarwash.id</a>
                 </p>
               </div>
             </div>
