--- a/app/templates/adddetaillayanan.html
+++ b/app/templates/adddetaillayanan.html
@@ -132,7 +132,7 @@
                                                         <td>
                                                             <select name="idpemesanan" id=""  class="form-control">
                                                                 {% for item in pemesanan %}
-                                                                <option value="{{item.idpemesanan}}">{{item.idpemesanan}}</option>
+                                                                <option value="{{item.idpemesanan}}">P_{{item.idpemesanan}}</option>
                                                                 {% endfor %}
                                                             </select>
                                                         </td>
