--- a/app/templates/tampillayanan.html
+++ b/app/templates/tampillayanan.html
@@ -136,7 +136,7 @@
                             </tr>
                             {%for item in alllayananobj %}
                             <tr>
-                                <td>{{ item.idlayanan }}</td>
+                                <td>L_{{ item.idlayanan }}</td>
                                 <td>{{ item.jenislayanan }}</td>
                                 <td>{{ item.harga }}</td>
                                 <td>
