--- a/app/templates/tampilpaket.html
+++ b/app/templates/tampilpaket.html
@@ -137,7 +137,7 @@
                                 </tr>
                                 {%for item in allpaketlayananobj %}
                                 <tr>
-                                    <td>{{ item.idpaketlayanan }}</td>
+                                    <td>PL_{{ item.idpaketlayanan }}</td>
                                     <td>{{ item.jenispaket }}</td>
                                     <td>{{ item.keteranganpaket }}</td>
                                     <td>{{ item.harga }}</td>
