--- a/app/templates/pemesanan.html
+++ b/app/templates/pemesanan.html
@@ -1,4 +1,4 @@
-﻿{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- theme meta -->
-    <meta name="theme-name" content="focus" />
-    <title>LOSIK Car Wash: Admin Dasboard</title>
+
+    <title>Losik Car Wash: Rekap Penjualan</title>
+
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
     <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
@@ -20,22 +20,19 @@
     <link rel="apple-touch-icon" sizes="72x72" href="http://placehold.it/72.png/000/fff">
     <!-- Standard iPhone Touch Icon-->
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
+
     <!-- Styles -->
-    <link href="{% static 'css/lib/calendar2/pignose.calendar.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/lib/chartist/chartist.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/lib/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/lib/themify-icons.css' %}" rel="stylesheet">
-    <link href="{% static 'css/lib/owl.carousel.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/lib/owl.theme.default.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/lib/weather-icons.css' %}" rel="stylesheet" />
+    <!-- <link href="{% static 'css/lib/data-table/buttons.bootstrap.min.css' %}" rel="stylesheet" /> -->
     <link href="{% static 'css/lib/menubar/sidebar.css' %}" rel="stylesheet">
     <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/lib/helper.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/js/dataTables/dataTables.bootstrap.css' %}" rel="stylesheet" />
 </head>
 
 <body>
-
     <div class="sidebar sidebar-hide-to-small sidebar-shrink sidebar-gestures">
         <div class="nano">
             <div class="nano-content">
@@ -63,117 +60,120 @@
             </div>
         </div>
     </div>
-    <!-- /# sidebar -->
-
-    <div class="header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="float-left">
-                        <div class="hamburger sidebar-toggle">
-                            <span class="line"></span>
-                            <span class="line"></span>
-                            <span class="line"></span>
-                        </div>
-                    </div>
-                    <div class="float-right">
-                        <div class="dropdown dib">
-                            <div class="header-icon">
-                                    <a class="ti-user" href="{% url 'profile' %}" >
-                                    </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-    </div>
+        <!-- /# sidebar -->
 
 
-    <div class="content-wrap">
-        <div class="main">
+        <div class="header">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-8 p-r-0 title-margin-right">
-                        <div class="page-header">
-                            <div class="page-title">
-                                <h1>Hello, <span>Welcome to LOSIK Car Wash </span></h1>
+                    <div class="col-lg-12">
+                        <div class="float-left">
+                            <div class="hamburger sidebar-toggle">
+                                <span class="line"></span>
+                                <span class="line"></span>
+                                <span class="line"></span>
+                            </div>
+                        </div>
+                        <div class="float-right">
+                            <div class="dropdown dib">
+                                <div class="header-icon">
+                                        <a class="ti-user" href="{% url 'profile' %}" >
+                                        </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!-- /# column -->
-                    <div class="col-lg-4 p-l-0 title-margin-left">
-                        <div class="page-header">
-                            <div class="page-title">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Daftar Pemesanan</a></li>
-                                    <li class="breadcrumb-item active">Data</li>
-                                </ol>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /# column -->
                 </div>
-                <!-- /# row -->
- 
-<section id="main-content">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-title">
-                    <h4>Daftar Pemesanan </h4>
-                </div>
-                <div class="bootstrap-data-table-panel">
-                    <div class="table-responsive">
-                        <table id="row-select" class="display table table-borderd table-hover">
-                            <tr>
-                                <th>ID Pemesanan</th>
-                                <th>Paket Pelanggan</th>
-                                <th>Nama</th>
-                                <th>Plat Nomor</th>
-                                <th>Tanggal Pesan</th>
-                                <th>Detail Layanan</th>
-                                <th>Action</th>
-                            </tr>
-                            {% for item in pemesanan %}
-                            <tr>
-                                <td>P_{{ item.0.idpemesanan }}</td>
-                                <td>{{ item.0.idpaketpelanggan.jenispaket }}</td>
-                                <!-- <td>{{ item.0.idlayanan.jenislayanan }}</td> -->
-                                <td>{{ item.0.nama }}</td>
-                                <td>{{ item.0.platnomor }}</td>
-                                <td>{{ item.0.tanggalpesan }}</td>
-                                <td>
-                                    {% for x in item.1 %}
-                                    <p>
-                                        {{x.idlayanan.jenislayanan}}
-                                    </p>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    <a href="{% url 'invoice' item.0.idpemesanan %}" class="btn btn-success">Cetak Invoice</a>
-                                    <a href="{% url 'perbarui' item.0.idpemesanan %}" class="btn btn-info">
-                                        Update
-                                    </a>
-                                    <a href="{% url 'detaillayanan' item.0.idpemesanan %}" class="btn btn-primary">
-                                        Detail Layanan
-                                    </a>
-                                    <a href="{% url 'hapus' item.0.idpemesanan %}" class="btn btn-danger">
-                                        Delete
-                                    </a>
-                                </td>
-                            </tr>
-                            {% endfor %}    
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <!-- /# card -->
+            </div> 
         </div>
-                
+    
+    
+    
+    
+        <div class="content-wrap">
+            <div class="main">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-8 p-r-0 title-margin-right">
+                            <div class="page-header">
+                                <div class="page-title">
+                                    <h1>Hello, <span>Welcome to LOSIK Car Wash </span></h1>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /# column -->
+                        <div class="col-lg-4 p-l-0 title-margin-left">
+                            <div class="page-header">
+                                <div class="page-title">
+                                    <ol class="breadcrumb">
+                                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
+                                        <li class="breadcrumb-item active">Home</li>
+                                    </ol>
+                                </div>
+                            </div>
+                        </div>
                         <!-- /# column -->
                     </div>
-
+                <!-- /# row -->
+                <section id="main-content">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="card">
+                                <div class="bootstrap-data-table-panel">
+                                    <div class="table-responsive">
+                                        <table id="dataTables-example" class="display table table-borderd table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>ID Pemesanan</th>
+                                                    <th>Paket Pelanggan</th>
+                                                    <th>Nama Pelanggan</th>
+                                                    <th>Plat Nomor</th>
+                                                    <th>Tanggal Pesan</th>
+                                                    <th>Detail Layanan</th>
+                                                    <th>Action</th>
+                                                </tr>
+                                            </thead>
+                                           
+                                            <tbody>
+                                                {% for item in pemesanan %}
+                                                <tr>
+                                                    <td>P_{{ item.0.idpemesanan }}</td>
+                                                    <td>{{ item.0.idpaketpelanggan.jenispaket }}</td>
+                                                    <!-- <td>{{ item.0.idlayanan.jenislayanan }}</td> -->
+                                                    <td>{{ item.0.nama }}</td>
+                                                    <td>{{ item.0.platnomor }}</td>
+                                                    <td>{{ item.0.tanggalpesan }}</td>
+                                                    <td>
+                                                        {% for x in item.1 %}
+                                                        <p>
+                                                            {{x.idlayanan.jenislayanan}}
+                                                        </p>
+                                                        {% endfor %}
+                                                    </td>
+                                                    <td>
+                                                        <a href="{% url 'invoice' item.0.idpemesanan %}" class="btn btn-success">Cetak Invoice</a>
+                                                        <a href="{% url 'perbarui' item.0.idpemesanan %}" class="btn btn-info">
+                                                            Update
+                                                        </a>
+                                                        <a href="{% url 'detaillayanan' item.0.idpemesanan %}" class="btn btn-primary">
+                                                            Detail Layanan
+                                                        </a>
+                                                        <a href="{% url 'hapus' item.0.idpemesanan %}" class="btn btn-danger">
+                                                            Delete
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /# card -->
+                        </div>
+                        <!-- /# column -->
+                    </div>
+                    <!-- /# row -->
 
                     <div class="row">
                         <div class="col-lg-12">
@@ -187,6 +187,13 @@
         </div>
     </div>
 
+
+
+
+
+
+
+    
     <!-- jquery vendor -->
     <script src="{% static 'js/lib/jquery.min.js' %}"></script>
     <script src="{% static 'js/lib/jquery.nanoscroller.min.js' %}"></script>
@@ -194,28 +201,38 @@
     <script src="{% static 'js/lib/menubar/sidebar.js' %}"></script>
     <script src="{% static 'js/lib/preloader/pace.min.js' %}"></script>
     <!-- sidebar -->
-
-    <script src="{% static 'js/lib/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
+    
     <!-- bootstrap -->
 
-    <script src="{% static 'js/lib/calendar-2/moment.latest.min.js' %}"></script>
-    <script src="{% static 'js/lib/calendar-2/pignose.calendar.min.js' %}"></script>
-    <script src="{% static 'js/lib/calendar-2/pignose.init.js' %}"></script>
-
-
-    <script src="{% static 'js/lib/weather/jquery.simpleWeather.min.js' %}"></script>
-    <script src="{% static 'js/lib/weather/weather-init.js' %}"></script>
-    <script src="{% static 'js/lib/circle-progress/circle-progress.min.js' %}"></script>
-    <script src="{% static 'js/lib/circle-progress/circle-progress-init.js' %}"></script>
-    <script src="{% static 'js/lib/chartist/chartist.min.js' %}"></script>
-    <script src="{% static 'js/lib/sparklinechart/jquery.sparkline.min.js' %}"></script>
-    <script src="{% static 'js/lib/sparklinechart/sparkline.init.js' %}"></script>
-    <script src="{% static 'js/lib/owl-carousel/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/lib/owl-carousel/owl.carousel-init.js' %}"></script>
+    <script src="{% static 'js/lib/bootstrap.min.js' %}"></script><script src="{% static 'js/scripts.js'%}"></script>
     <!-- scripit init-->
-    <script src="{% static 'js/dashboard2.js' %}"></script>
+    <!-- <script src="{% static 'js/lib/data-table/datatables.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/dataTables.buttons.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/buttons.flash.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/jszip.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/pdfmake.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/vfs_fonts.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/buttons.html5.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/buttons.print.min.js' %}"></script>
+    <script src="{% static 'js/lib/data-table/datatables-init.js' %}"></script> -->
+
+    <script src="{% static 'assets/js/dataTables/jquery.dataTables.js' %}"></script>
+    <script src="{% static 'assets/js/dataTables/dataTables.bootstrap.js' %}"></script>
+        <script>
+            $(document).ready(function () {
+                $('#dataTables-example').dataTable();
+            });
+    </script>
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
-
