--- a/app/templates/generate.html
+++ b/app/templates/generate.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- theme meta -->
     <meta name="theme-name" content="focus" />
-    <title>LOSIK Car Wash: Admin Dasboardd</title>
+    <title>Losik Car Wash: Rekap Penjualan</title>
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
     <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
