--- a/app/templates/createdata.html
+++ b/app/templates/createdata.html
@@ -143,7 +143,7 @@
                                                         <td>
                                                             <select name="idlayanan" id=""class="form-control">
                                                                 {% for item in layanantersedia %}
-                                                                <option value="{{item.idlayanan}}">{{item}}</option>
+                                                                <option value="{{item.idlayanan}}">{{item.jenislayanan}}</option>
                                                                 {% endfor %}
                                                             </select>
                                                         </td>
