--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -154,6 +154,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-12">
+                            <div class="card">
+                                <div class="stat-widget-one">
+                                    <div class="stat-icon dib"><i class="ti-money color-success border-success"></i>
+                                    </div>
+                                    <div class="stat-content dib">
+                                        <div class="stat-text">Total Pendapatan</div>
+                                        <div class="stat-digit">Rp. {{total}},-</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         
                             
                               <div class="col-sm-12">
@@ -162,6 +174,7 @@
                                         <h4></h4>
                                     </div>
                                     <div class="card-toggle-body col-lg-16">
+                                        
                                         <div class="button-list">
                                             <a href="{% url 'createdata' %}" 
                     class="btn btn-lg btn-primary btn-block waves-effect waves-light col-lg-16">
