--- a/app/templates/rekap.html
+++ b/app/templates/rekap.html
@@ -119,6 +119,7 @@
                         <div class="col-lg-12">
                             <div class="card">
                                 <div class="bootstrap-data-table-panel">
+                                    
                                     <div class="table-responsive">
                                         <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
                                             <thead>
@@ -146,9 +147,12 @@
                                                         </p>
                                                         {% endfor %}
                                                     </td>
-                                                    <td>{{item.0.idpaketpelanggan.harga}}{% for x in item.1 %}+{{x.idlayanan.harga}}{% endfor %}</td>
+                                                    <td>{% for x in item.1 %}
+                                                    
+                                                        Rp.{{x.idlayanan.harga}},-<p></p>
+                                                        {% endfor %}</td>
                                                 </tr>
-                                            {% endfor %}
+                                                {% endfor %}
                                             </tbody>
                                         </table>
                                     </div>
